<?xml version="1.0"?>

<package format="2">
    <name>reef_teleop</name>
    <version>0.0.0</version>
    <description>The reef_teleop package</description>

    <maintainer email="william.warke@ufl.edu">willie</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>joy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_runtime</build_depend>

    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>joy</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>message_runtime</build_export_depend>

    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
